src/tess/tl/test/fail/test_fail_nested_module_no_parent.tl
#module Foo.Bar
f() { 0 }

#module main
main() { Foo.Bar.f() }
